add application list